# data-pipeline-demo

./: .gitignore  LICENSE  Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
models/marts/: dim_customers.sql  fct_orders.sql  metrics_daily.sql  schema.yml
models/staging/: schema.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
pipeline/: __init__.py  extract.py  load.py  monitor.py  orchestrate.py  quality.py  transform.py
tests/: test_pipeline.py  test_quality.py
